<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_organization_navigation"
    app:startDestination="@+id/navigation_orders">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.smartwaiter.organizationBranch.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.smartwaiter.organizationBranch.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_management"
        android:name="com.example.smartwaiter.organizationBranch.ui.management.ManagementFragment"
        android:label="@string/title_management"
        tools:layout="@layout/fragment_management" />
</navigation>