<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_client_navigation"
    app:startDestination="@id/navigation_menuClient">



    <fragment
        android:id="@+id/navigation_menuClient"
        android:name="com.example.smartwaiter.clientBranch.ui.menuClient.MenuClientFragment"
        android:label="@string/title_menuClient"
        tools:layout="@layout/fragment_menu_client" />

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.smartwaiter.clientBranch.ui.basketClient.BasketFragment"
        android:label="@string/title_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/navigation_managementClient"
        android:name="com.example.smartwaiter.clientBranch.ui.managementClient.ManagementClientFragment"
        android:label="@string/title_managementClient"
        tools:layout="@layout/fragment_management_client" />


</navigation>